--- a/shinzin2/Shinzin-Mobile.css
+++ b/shinzin2/Shinzin-Mobile.css
@@ -9,7 +9,7 @@ text-decoration: none;
 
 body {
 	text-align: center;
-	background-image: url(background.jpg);
+	background-image: url(background2.jpg);
 	color:#FFFFFF;
 	background-position: center center;
   	background-repeat: no-repeat;
