3ページ目終了

--- a/windows/css/main.css
+++ b/windows/css/main.css
@@ -323,7 +323,13 @@ html, body {
 
 /* line 18, ../scss/main.scss */
 .window:nth-child(4) {
-  background: #333a3e;
+ background-image: url(../background4.jpg);
+ background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+  text-align: center;
   top: 300%;
 }
 
